# gemma4-edge-benchmark

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
clock_time_reading/: README.md  rubric.md
configs/: generation_profiles.yaml
configs/backends/: vllm.yaml  vllm_baseline.yaml  vllm_image.yaml  vllm_image_1120.yaml  vllm_image_280.yaml  vllm_image_560.yaml  vllm_prefix_caching.yaml
data/corpora/soc_incident_triage/: alert_log.txt  (+3 more)
docs/: gemma4_edge_blog_post.md  judge_template.md  metrics.md  prompting.md  runbook.md
docs/systems/: README.md
docs/use_cases/: customer_support_assistant.md  developer_edge_copilot.md  document_processing_pipeline.md  field_service_copilot.md  healthcare_admin_assistant.md  image_classification_caltech256.md  image_classification_cifar10.md  image_text_extraction_multilingual.md  industrial_maintenance_agent.md  offline_knowledge_assistant.md  retail_warehouse_operations.md  soc_incident_triage.md  vehicle_robot_operator_assistant.md
maze_navigation/: README.md  levels.yaml  rubric.md
scripts/: generate_assets.py  preflight_smoke_test.py  prepare_judge_packets.py  run_benchmark.py  run_maze_navigation.py  run_maze_navigation_smoke.py  run_smoke_benchmark.py  run_systems_benchmark.py  summarize_maze_navigation.py  summarize_results.py  summarize_systems_results.py  validate_maze_navigation.py  validate_suite.py
src/gemma_vllm_benchmark/: __init__.py  catalog.py  generate_assets.py  image_benchmarks.py  maze_navigation.py  runner.py  systems.py  tegrastats.py
systems/: manifest.yaml  smoke_manifest.yaml
tests/: conftest.py  test_catalog.py  test_manifests.py  test_maze_navigation.py
(+77 files in other folders)
